Local authentication's working fine

--- a/front/public/css/footer.scss
+++ b/front/public/css/footer.scss
@@ -1,10 +1,5 @@
-.footer {
+.footer{
+  background: #ee6e73;
   position: absolute;
-  width: 100%;
-  left: 0;
-  right:0;
-}
-
-.aboutDesc {
-  color: gray;
+  bottom:0;
 }
