--- a/front/public/css/signup.scss
+++ b/front/public/css/signup.scss
@@ -1,23 +1,95 @@
-html, body {
-  height: 100%;
-}
-
-.input {
-    margin-bottom: 2em;
-}
-
-.form-holder {
-    background: rgba(255,255,255,0.2);
-    border-radius: 3px;
-  }
-
-  .form-head {
-    font-size: 30px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    margin: 15px auto 30px auto;
-  }
-
-  .remember-me {
-    text-align: left;
-  }
+////html, body {
+////  height: 100%;
+////}
+////
+////.input {
+////    margin-bottom: 2em;
+////}
+////
+////.form-holder {
+////    background: rgba(255,255,255,0.2);
+////    border-radius: 3px;
+////  }
+////
+////  .form-head {
+////    font-size: 30px;
+////    letter-spacing: 2px;
+////    text-transform: uppercase;
+////    margin: 15px auto 30px auto;
+////  }
+////
+////  .remember-me {
+////    text-align: left;
+////  }
+//
+//
+//.container{
+//
+//
+//  &__social{
+//    border:1px solid red;
+//    padding:20px;
+//    display: flex;
+//    justify-content:center;
+//    align-items: center;
+//    flex-direction: column;
+//
+//    a{
+//      margin:12px;
+//
+//
+//      button{
+//        width:200px;
+//      }
+//    }
+//  }
+//}
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
