--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -1,55 +1,101 @@
-*{
-  box-sizing: border-box;
+.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+}
+.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}
+.video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
+.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+.video-container video.fillWidth {
+    width: 100%;
 }
 
-.center{
-  text-align: center;
-}
-
-
-
-
-.login{
-  margin:0 auto;
-  margin-top:20px;
-  width:500px;
-  border:1px solid rgba(0, 0, 0, 0.5);
-
-  &__social{
+.container{
     display: flex;
-    justify-content:center;
-    flex-direction:column;
     align-items: center;
-    //border:1px solid red;
-
-    button{
-      width:120px;
-      margin-top:10px;
-    }
-  }
-
-
-  &__form{
-    //border:1px solid red;
-
-
-  }
-
-  &__register{
-
-    p{
-      border:1px solid green;
-      width:100%;
-      padding:12px 0;
-      margin-top:20px;
-    }
-    
-  }
-  
-
-
+    justify-content: center;
 }
 
-.login .login__register{
-  padding:0;
+
+.btn{
+    display: inline-block;
+    position: relative;
+    border-width: 2px;
+    top: 350px;
+    z-index: 10000;
+    color: black;
+    font-family: Passion One;
+    font-size: 24px;
+    /*margin: 50px;*/
+    margin-right: 50px;
+    margin-left: 50px;
+    margin: 0,50px,0px,50px;
+    width: 150px;
+    max-width: 50%;
 }
+
+.btn:hover{
+    cursor: pointer;
+}
+
+.middle-text{
+    z-index: 100000;
+    font-family: Nunito;
+    position: relative;
+    /*left: 120px;*/
+    font-size: 72px;
+    top: 330px;
+}
+
+.green{
+    color: green;
+}
+
+.blue{
+    color: blue;
+}
+
+.bootcruit{
+    position: relative;
+    left: 10px;
+    z-index: 10000;
+    font-family: Teko;
+    letter-spacing: 1px;
+    font-size: 52px;
+    margin: 15px;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
