--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -31,11 +31,11 @@
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
 }
-.video-container video {
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-}
+// .video-container video {
+//     position: absolute;
+//     z-index: 0;
+//     bottom: 0;
+// }
 .video-container video.fillWidth {
     width: 100%;
 }
@@ -72,7 +72,7 @@
     z-index: 100000;
     font-family: Nunito;
     position: relative;
-    /*left: 120px;*/
+    left: 150px;
     font-size: 72px;
     top: 330px;
 }
@@ -88,7 +88,7 @@
 .bootcruit{
     position: relative;
     left: 10px;
-    z-index: 10000;
+    // z-index: 10000;
     font-family: Teko;
     letter-spacing: 1px;
     font-size: 52px;
