--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Teko');
 .homepage-hero-module {
     border-right: none;
     border-left: none;
@@ -77,11 +79,11 @@
     top: 330px;
 }
 
-.green{
+.greenn{
     color: green;
 }
 
-.blue{
+.bluee{
     color: blue;
 }
 
