--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -1,103 +1,45 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-@import url('https://fonts.googleapis.com/css?family=Teko');
-.homepage-hero-module {
-    border-right: none;
-    border-left: none;
-    position: relative;
-}
-.no-video .video-container video,
-.touch .video-container video {
-    display: none;
-}
-.no-video .video-container .poster,
-.touch .video-container .poster {
-    display: block !important;
-}
-.video-container {
-    position: relative;
-    bottom: 0%;
-    left: 0%;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    background: #000;
-}
-.video-container .poster img {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-}
-.video-container .filter {
-    z-index: 100;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    width: 100%;
-}
-// .video-container video {
-//     position: absolute;
-//     z-index: 0;
-//     bottom: 0;
-// }
-.video-container video.fillWidth {
-    width: 100%;
+body, html{
+    width:100%;
+    height:100%;
 }
 
-.container{
+.video{
+
+
     display: flex;
+    justify-content:center;
     align-items: center;
-    justify-content: center;
+    margin-bottom:50px;
+
+
+    .fullscreen {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+    }
+
+
+    &__buttons{
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        z-index: 2;
+
+        /* bring your own prefixes */
+        transform: translate(-50%, -50%);
+
+        button{
+            width:150px;
+            margin:10px;
+
+        }
+
+        h5{
+            text-align: center;
+        }
+    }
+
+
+
 }
-
-
-.btn{
-    display: inline-block;
-    position: relative;
-    border-width: 2px;
-    top: 350px;
-    z-index: 10000;
-    color: black;
-    font-family: Passion One;
-    font-size: 24px;
-    /*margin: 50px;*/
-    margin-right: 50px;
-    margin-left: 50px;
-    margin: 0,50px,0px,50px;
-    width: 150px;
-    max-width: 50%;
-}
-
-.btn:hover{
-    cursor: pointer;
-}
-
-.middle-text{
-    z-index: 100000;
-    font-family: Nunito;
-    position: relative;
-    left: 150px;
-    font-size: 72px;
-    top: 330px;
-}
-
-.greenn{
-    color: green;
-}
-
-.bluee{
-    color: blue;
-}
-
-.bootcruit{
-    position: relative;
-    left: 10px;
-    // z-index: 10000;
-    font-family: Teko;
-    letter-spacing: 1px;
-    font-size: 52px;
-    margin: 15px;
-}
-
-a:hover{
-    text-decoration: none;
-}
-
