--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -3,18 +3,17 @@
 
 body, html{
     width:100%;
-    height:100%;
+    height:100vh;
 }
 
 .video{
     display: flex;
     justify-content:center;
     align-items: center;
-    margin-bottom:50px;
     position: relative;
     bottom: 0%;
     left: 0%;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
     background: #000;
@@ -24,6 +23,8 @@ body, html{
     //     top: 0;
     //     left: 0;
     //     height: 100%;
+
+
 
     &__buttons{
         position: fixed;
@@ -39,7 +40,7 @@ body, html{
 			background-color: transparent;
 			margin: 40px;
 			border-radius: .25rem;
-			box-shadow: 1px 1px 0px black;
+			box-shadow: 2px 2px 0px black;
         	height: 50px;
         	width: 150px;
         	color: black;
@@ -47,7 +48,7 @@ body, html{
         	font-size: 20px;
         	display: inline-block;
         }
-
+        
         .greenButton{
         	border: 2px solid #5cb85c;
         	
@@ -55,7 +56,12 @@ body, html{
 
         .blueButton{
         	border: 2px solid #428bca;
-      
+            
+        }
+        
+        .greenButton:hover,.blueButton:hover{
+            cursor: pointer;
+            transition: all 0.3s;
         }
 
         .greenButton:hover{
@@ -75,10 +81,6 @@ body, html{
         }
     }
 
-	.BootCruit{
-		bottom: 150px;
-		right: 150px;
-	}
 
 
 }
