--- a/front/public/css/footer.scss
+++ b/front/public/css/footer.scss
@@ -1,5 +1,55 @@
-.footer{
-  background: #ee6e73;
-  position: absolute;
+footer{
+  background-color: #424242;
+  width: 100%;
+  height: 0 auto;
   bottom:0;
+  position: fixed;
+  margin:0 auto;
+  text-align: center;
+  box-shadow: 3px 3px grey;
+  padding:1.50%;
+  line-height: 148%;
+  color: white;
+  box-shadow: 1px 1px 2px black, 0 0 25px olive, 0 0 5px darkblue;
+  // border-top-color: black;
+}
+li{
+  color: #99a682;
+  list-style: none;
+  font-size: 0.95em;
+}
+
+ul{
+
+}
+.p{
+  color:#dde1d5;
+  font-weight: bold;
+  font-size: 1.25em;
+}
+.copyRight{
+ text-align: center;
+  position: relative;
+  padding-bottom:1%;
+  padding-top: 0;
+  margin:0;
+  line-height: 1%;
+  left:44%;
+  color: olive;
+  font-size: 0.95em;
+
+}
+h1{
+  margin-left: 7%;
+}
+.text{
+padding:5%;
+width:50%;
+text-align: center;
+}
+a{
+  color:#99a682;
+}
+a:hover{
+  color:skyblue;
 }
