--- a/front/public/css/event.scss
+++ b/front/public/css/event.scss
@@ -1,9 +1,35 @@
 .events{
   height:400px;
-  //overflow-y: scroll;
-  //overflow-x: hidden;
-}
+  overflow-y: scroll;
+  overflow-x: hidden;
+  ::-webkit-scrollbar {
+  width: 12px;
+  color: red;
+  }
+  ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  height: 5px;
+  margin-left: 2px
+  }
+  ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  .events:hover::-webkit-scrollbar-thumb{
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 
+  .events::-webkit-scrollbar{
+    width: 0.2rem;
+    transition:width 2s;
+  }
+
+  .events:hover::-webkit-scrollbar{
+    width: 0.3rem;
+    transition:width 5s;
+  }
+}
+}
 
 .events:hover::-webkit-scrollbar-thumb{
   background-color: rgba(0, 0, 0, 0.5);
