--- a/front/public/css/event.scss
+++ b/front/public/css/event.scss
@@ -4,8 +4,14 @@
   overflow-x: hidden;
   ::-webkit-scrollbar {
   width: 12px;
-  color: red;
+  padding:1%;
+  // color: red;
+
   }
+  p{
+    word-wrap: break-word;
+  }
+
   ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
