--- a/front/public/css/footer.scss
+++ b/front/public/css/footer.scss
@@ -1,17 +1,14 @@
 footer{
   background-color: #424242;
   width: 100%;
-  height: 0 auto;
-  bottom:0;
-  position: fixed;
+  //bottom:0;
+  position: absolute;
   margin:0 auto;
   text-align: center;
-  box-shadow: 3px 3px grey;
+  //box-shadow: 3px 3px grey;
   padding:1.50%;
-  line-height: 148%;
   color: white;
   box-shadow: 1px 1px 2px black, 0 0 25px olive, 0 0 5px darkblue;
-  // border-top-color: black;
 }
 li{
   color: #99a682;
@@ -28,7 +25,7 @@ ul{
   font-size: 1.25em;
 }
 .copyRight{
- text-align: center;
+  text-align: center;
   position: relative;
   padding-bottom:1%;
   padding-top: 0;
@@ -43,9 +40,9 @@ h1{
   margin-left: 7%;
 }
 .text{
-padding:5%;
-width:50%;
-text-align: center;
+  padding:5%;
+  width:50%;
+  text-align: center;
 }
 a{
   color:#99a682;
