Sign In and Sign Up Modal's working

--- a/front/public/css/signup.scss
+++ b/front/public/css/signup.scss
@@ -1,239 +1,124 @@
-body{
-	width:100%;
-	height:100%;
-	background-color: white;
-}
 
-.mainContainer{
-// background: grey;
-	/*height: 700px;
-	margin-top: 20px;
-	width: 820px;*/
 
-	background:#fff;
-	position:fixed;
-	background-size:cover;
-	height: 95%;
-	width: 98%;
-	margin-bottom: 5%;
-	margin-right: 20%;
-	border: 1px 1px 1px red;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
-}
+.signup{
 
-.leftHeading{
-	margin: 15px;
-	padding: 25px;
-	font-weight: 500;
-	font-size: 300%;
-	position: relative;
-	right: 40%;
-	color: rgba(120,210,200,1);
-	right:33%;
-}
+	.mainContainer{
+		background:#fff;
+		background-size:cover;
+		display: flex;
+		justify-content:center;
+	}
 
-.input{
-	display: block;
-	margin: 5%;
-	position: relative;
-	right: 5%;
-	border: none;
-	background: transparent;
-	color: rgba(111,191,194,1);
-}
+	.leftHeading{
+		margin: 15px;
+		padding: 25px;
+		position: relative;
+		color: rgba(120,210,200,1);
+		right:33%;
+	}
 
-.correct{
-	display: none;
-}
+	.input{
+		display: block;
+		margin: 5%;
+		position: relative;
+		right: 5%;
+		border: none;
+		background: transparent;
 
-.incorrect{
-	color:red;
-	font-size:100%;
-}
+	}
 
-.mistake{
-	position: relative;
-	left: 4%;
-	color: red;
-	font-weight: 200;
-}
+	.correct{
+		display: none;
+	}
 
-.sideContainer{
-	position: relative;
-	left: 7.5%;
-	top: 2%;
-	width: 36%;
-	float: left;
-	height: 99%;
-	text-align: center;
-	font-size: 110%;
-}
+	.incorrect{
+		color:red;
+		font-size:100%;
+	}
 
-.shadowBox{
-	margin-top: 1%;
-	margin-left: 1%;
-	// box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+	.mistake{
+		position: relative;
+		left: 4%;
+		color: red;
+		font-weight: 200;
+	}
 
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #707070;
-		opacity: 0.6;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #707070;
-   opacity:  1;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #707070;
-   opacity:  1;
-}
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #707070;
-}
-::-ms-input-placeholder { /* Microsoft Edge */
-   color:    #707070;
-}
+	.sideContainer{
+		height: 99%;
+		text-align: center;
+	}
 
-input:focus{
-	outline: none;
-}
 
-.button{
-	background-color: rgba(115,233,190,1);
-	font-weight: bold;
-	width: 40%;
-	height: 8%;
-	margin-top: 5%;
-	position: relative;
-	right: 30%;
-	border: none;
-	border-radius: 2px;
-	color: white;
-}
+	input:focus{
+		outline: none;
+	}
 
-.rightContainer .button{
-	left: 25%;
-	margin-top: 5%;
-	width: 60%;
-	left: 23%;
-}
+	.rightContainer .button{
+		margin-top: 5%;
+		left: 23%;
+	}
 
-.button:hover{
-	background-color: #1e8e79;
-	cursor: pointer;
-	transition: all 0.7s;
-	box-shadow: 0 4px 8px 0 rgba(255,255,255, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.7);
+	.button:hover{
+		background-color: #1e8e79;
+		cursor: pointer;
+		transition: all 0.7s;
+		box-shadow: 0 4px 8px 0 rgba(255,255,255, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.7);
+	}
 
-}
+	.rightContainer{
+		height: 95%;
+		background-image: url('/../img/login_image.jpg');
+		background-size: cover;
+		background-repeat: no-repeat;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		display: flex;
+		justify-content:center;
+		flex-direction:column;
+		align-items: center;
+	}
 
-.rightContainer{
-	width: 49%;
-	height: 95%;
-	position: absolute;
-	left: 50%;
-	float: right;
-	background-image: url('/../img/login_image.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	position:fixed;
+	.rightHeading{
+		position: relative;
+		color: white;
+		text-align: center;
+	}
 
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+	h1{
+		top: 4%;
+	}
 
-.rightHeading{
-	margin: 1%;
-	padding: 5%;
-	font-weight: 500;
-	position: relative;
-	font-size: 260%;
-	color: white;
-	text-align: center;
-}
+	.facebook,.twitter,.google, .linkedin{
+		color: white;
+		cursor: pointer;
+		width:150px;
+		padding:2px;
+	}
 
-h1{
-	top: 4%;
-}
+	.facebook{
+		background: #3b5998;
+	}
 
-.facebook,.twitter,.google{
-	color: white;
-	font-weight: 500;
-}
+	.twitter{
+		background: #00aced;
+	}
 
-.facebook{
-	background: #3b5998;
-}
+	.google{
+		background: #d34836;
+	}
 
-.twitter{
-	background: #00aced;
-}
 
-.google{
-	background: #d34836;
-}
+	.google:hover{
+		background-color: #af1f0f;
+	}
 
-.google:hover,.facebook:hover,.twitter:hover{
+	.facebook:hover{
+		background-color: #0c3892;
+	}
 
-	cursor: pointer;
-}
-.google:hover{
-	background-color: #af1f0f;
-}
+	.twitter:hover{
+		background-color: #0d8aea;
+	}
 
-.facebook:hover{
-	background-color: #0c3892;
-}
 
-.twitter:hover{
-	background-color: #0d8aea;
-}
 
-button.circle{
-	height: 70px;
-	width: 70px;
-	background-color: lightgrey;
-	border-radius: 50%;
-	border: none;
-	position: relative;
-	left: 11.5%;
-	top: 45%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.circle h3{
-	font-weight: 300;
-}
-
-@media screen and (min-width: 375px) {
-    button.circle {
-        left: 6%;
-    }
-}
-@media screen and (min-width: 480px) {
-    button.circle {
-        left: 10%;
-    }
-}
-
-@media screen and (min-width: 514px) {
-    button.circle {
-        left: 7.5%;
-    }
-}
-
-@media screen and (min-width: 709px) {
-    button.circle {
-        left: 9%;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    button.circle {
-        left: 10%;
-    }
-}
-
-@media screen and (min-width: 1080px) {
-    button.circle {
-        left: 11%;
-    }
 }
