--- a/front/public/css/profile.scss
+++ b/front/public/css/profile.scss
@@ -10,27 +10,7 @@
     box-shadow: none;
   }
 
-
-.profile{
-
-  .content{
-    border:none;
-  }
-
-
-
-  .profile-picture{
-    height:200px;
-    width:100%;
-    background-image: url('https://yt3.ggpht.com/-r_tiN0JoSiE/AAAAAAAAAAI/AAAAAAAAAAA/AbgSGAVS35M/s900-c-k-no-mo-rj-c0xffffff/photo.jpg');
-    -webkit-background-size: contain;
-    background-size: contain;
-    background-repeat:no-repeat;
-  }
-
-  .menu{
-    position: relative;
-    bottom:0;
-    background-color: red;
-  }
+.ui.pointing{
+  width:147px;
 }
+
