--- a/front/public/css/_global.scss
+++ b/front/public/css/_global.scss
@@ -6,3 +6,18 @@ img{
   width:100px;
   height:100px;
 }
+
+
+.layout-col{
+  display: flex;
+  justify-content:center;
+  flex-direction:column;
+  align-items: center;
+}
+
+
+.layout{
+  display: flex;
+  justify-content:center;
+  align-items: center;
+}
