--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -1,11 +1,27 @@
 
-.home--component{
+.layout{
   display: flex;
   justify-content:center;
-  flex-direction:column;
-  align-items:center;
-  height:100vh;
+  align-items: center;
+}
 
+.home--component{
+  flex-direction:column;
+  height:85vh;
+
+  .banner--list{
+    position: absolute;
+    top:0;
+    left:8em;
+
+    h1{
+      margin-top:10px;
+    }
+    ul li{
+      margin-left:15px;
+      color:#000;
+    }
+  }
 
   .buttons--container{
     .hide{
@@ -13,7 +29,16 @@
     }
 
     button{
-      margin:15px;
+      margin:10px;
+      color:#fff;
+      width:110px;
+    }
+
+    button:first-child{
+      background: #1a237e;
+    }
+    button:last-child{
+      background: #2BBBAD;
     }
   }
 }
