--- a/front/public/css/signin.scss
+++ b/front/public/css/signin.scss
@@ -4,15 +4,15 @@
 
 
   .signin--form-container{
-    height:200px;
+    height:330px;
   }
 
   .input{
-    display: block;
     margin: 5%;
     position: relative;
     border: none;
     background: transparent;
+    width:85%;
   }
 
   .correct{
@@ -54,6 +54,7 @@
 
   .rightContainer{
     width:80%;
+    height: 329px;
     background-image: url('/../img/login_image.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -71,39 +72,39 @@
     top: 4%;
   }
 
-  .facebook,.twitter,.google, .linkedin{
+  .button-facebook,.button-twitter,.button-google, .button-linkedin{
     color: white;
     cursor: pointer;
     width:120px;
-    padding:2px;
+    padding:10px;
   }
 
   i{
     background: none;
   }
 
-  .facebook{
+  .button-facebook{
     background: #3b5998;
   }
 
-  .twitter{
+  .button-twitter{
     background: #00aced;
   }
 
-  .google{
+  .button-google{
     background: #d34836;
   }
 
 
-  //.google:hover{
-  //  background-color: #af1f0f;
-  //}
-  //
-  //.facebook:hover{
-  //  background-color: #0c3892;
-  //}
-  //
-  //.twitter:hover{
-  //  background-color: #0d8aea;
-  //}
+  .button-google:hover{
+    background-color: #af1f0f;
+  }
+
+  .button-facebook:hover{
+    background-color: #0c3892;
+  }
+
+  .button-twitter:hover{
+    background-color: #0d8aea;
+  }
 }
