Modal fully functional

--- a/front/public/css/home.scss
+++ b/front/public/css/home.scss
@@ -36,7 +36,8 @@
     button{
       margin:10px;
       color:#fff;
-      width:110px;
+      padding:15px;
+      width:120px;
     }
 
     button:first-child{
