--- a/front/public/css/signup.scss
+++ b/front/public/css/signup.scss
@@ -66,7 +66,8 @@
 	}
 
 	.rightContainer{
-		height: 95%;
+		height: 329px;
+		width:80%;
 		background-image: url('/../img/login_image.jpg');
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -87,35 +88,38 @@
 		top: 4%;
 	}
 
-	.facebook,.twitter,.google, .linkedin{
+	.button-twitter,.button-google, .button-linkedin{
 		color: white;
 		cursor: pointer;
 		width:150px;
-		padding:2px;
+		padding:10px;
 	}
 
-	.facebook{
-		background: #3b5998;
-	}
 
-	.twitter{
+    .button-linkedin{
+    	background: #3b5998;
+    }
+
+
+	.button-twitter{
 		background: #00aced;
 	}
 
-	.google{
+	.button-google{
 		background: #d34836;
 	}
 
 
-	.google:hover{
+	.button-google:hover{
 		background-color: #af1f0f;
 	}
 
-	.facebook:hover{
-		background-color: #0c3892;
-	}
+    .button-linkedin:hover{
+    	background-color: #0c3892;
+    }
 
-	.twitter:hover{
+
+	.button-twitter:hover{
 		background-color: #0d8aea;
 	}
 
