--- a/front/public/css/footer.scss
+++ b/front/public/css/footer.scss
@@ -1,12 +1,12 @@
 footer {
+
   background-color: #424242;
   width: 100%;
-  //bottom:0;
-  position: absolute;
-  margin:0 auto;
+  position: fixed;
+  bottom: 0;
   text-align: center;
   //box-shadow: 3px 3px grey;
-  padding:1.50%;
+  padding: 1.50%;
   color: white;
   box-shadow: 1px 1px 2px black, 0 0 25px olive, 0 0 5px darkblue;
 }
@@ -18,19 +18,19 @@ li {
 }
 
 .p {
-  color:#dde1d5;
+  color: #dde1d5;
   font-weight: bold;
   font-size: 1.25em;
 }
 
-.copyRight{
+.copyRight {
   text-align: center;
   position: relative;
-  padding-bottom:1%;
+  padding-bottom: 1%;
   padding-top: 0;
-  margin:0;
+  margin: 0;
   line-height: 1%;
-  left:44%;
+  left: 44%;
   color: olive;
   font-size: 0.95em;
 
@@ -40,16 +40,16 @@ h1 {
   margin-left: 7%;
 }
 
-.text{
-  padding:5%;
-  width:50%;
+.text {
+  padding: 5%;
+  width: 50%;
   text-align: center;
 }
 
 a {
-  color:#99a682;
+  color: #99a682;
 }
 
 a:hover {
-  color:skyblue;
+  color: skyblue;
 }
