Footer is finally in the bottom, and dates converted into a readable format

--- a/front/public/css/_global.scss
+++ b/front/public/css/_global.scss
@@ -13,9 +13,6 @@ img{
   height:100px;
 }
 
-.content{
-    height:390px;
-}
 
 .layout-col{
   display: flex;
@@ -29,4 +26,14 @@ img{
   display: flex;
   justify-content:center;
   align-items: center;
+}
+
+#app{
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.profile{
+  flex: 1;
 }
