--- a/front/public/css/event.scss
+++ b/front/public/css/event.scss
@@ -2,10 +2,16 @@
 .events-container {
   position: relative;
   width: 644px;
-  border: 1px solid red;
   padding:10px;
 
   &__event {
+
+    border:1px solid rgba(0, 0, 0, 0.2);
+    padding:10px;
+    margin-top:30px;
+    -webkit-box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.3);
+    //-moz-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    //box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 
     &--content {
       display: flex;
