--- a/front/public/css/profile.scss
+++ b/front/public/css/profile.scss
@@ -22,5 +22,26 @@
     margin-top: 200px;
     position: fixed;
   }
+
+  #hackerthons{
+    border:1px solid grey;
+    height:385px;
+    position: fixed;
+    right:30px;
+    top:200px;
+
+
+    div{
+      .hack{
+        border:1px solid grey;
+        padding:20px;
+        margin-top:10px;
+
+        h4{
+          font-size:15px;
+        }
+      }
+    }
+  }
 }
 
