--- a/front/src/components/footer/footer.sass
+++ b/front/src/components/footer/footer.sass
@@ -1,5 +1,5 @@
 
-footer{
+footer
     position: fixed;
     bottom:0;
     padding: 30px 0 10px;
@@ -9,18 +9,17 @@ footer{
     z-index: 999;
     background: #f5f5f5;
     
-}
 
-footer div{
+
+footer div
     margin:20px;
-}
 
-ul > li{
+
+ul > li
     cursor: pointer;
-}
 
-.fa{
+
+.fa
     font-size: 1.5em;
     margin-left: 30px;
     
-}
