--- a/front/src/components/form/input/input.sass
+++ b/front/src/components/form/input/input.sass
@@ -1,17 +1,16 @@
 
-label {
+label 
     margin-bottom: 5px;
     font-size:15px;
-}
 
-label > span{
+label > span
     color: #999999;
-}
 
-.form-group{
+
+.form-group
     margin-bottom: 24px;
-}
-input{
+
+input
     border:1px solid #999999;
     height: 30px;
     padding: 6px 12px;
@@ -20,4 +19,4 @@ input{
     outline: none;
     color:#555;
     /* width:70%; */
-}
+
