Layout for Phase 1 is almost complete, functionality remaining

--- a/front/src/pages/events/event.scss
+++ b/front/src/pages/events/event.scss
@@ -1,65 +1,83 @@
+.search_events {
+    &>div:first-child {
+        width: 15%;
+        position: fixed;
+        display: block;
+        height: 73vh;
+        ul {
+            position: relative;
+            top: 5em;
+            li {
+                margin: 15px;
+                padding: 11px;
+                cursor: pointer;
+            }
+        }
+    }
+    &>div:last-child {
+        width: 85%;
+        border-left: 1px solid #efe8ed;
+        background: #f1f3f5;
+        margin-left: 15%;
+        .search {
+            form {
+                width: 100%;
+                .form-group {
+                    width: 50%;
+                    margin-top: 20px;
+                }
+            }
+        }
+    }
+    .week {
+        border: 1px solid #efe8ed;
+        border-radius: 4px;
+        position: relative;
+        padding: 20px;
+        margin: 20px;
+        width: 280px;
+        height: 280px;
+        opacity: 0;
+        background: #fff;
+        box-shadow: 3px 7px 10px 2px #efe8ed;
+        animation: fadein 500ms ease-in-out forwards;
+        img {
+            width: 100%;
+        }
+    }
+    .info {
+        display: none;
+    }
+    .current {
+        width: 100%;
+        margin: 0;
+        border-right-color: #fff;
+        background: #f1f3f5;
+    }
 
 
-.search_events > div:first-child{
-    width:15%;
-    position: fixed;    
-    display: block;
-    height: 73vh;
-    border-right:1px solid #efe8ed;
+    
 }
 
-.search_events ul{
-    position: relative;
-    top:5em;
-}
-
-.search_events ul li{
-    margin:15px;
-}
-
-.search_events > div:last-child{
-    width:85%;
-    border-left:1px solid #efe8ed;
-    background: #f1f3f5;
-    margin-left: 15%;
-}
-
-
-.search_events form .form-group{
-    width: 50%;
-    margin-top: 20px;
-}
-/* 
-.sidebar{
-    position: fixed;
-} */
-
-
-.week{
-    border:1px solid #efe8ed;
-    border-radius: 4px;
-    position: relative;
-    padding: 20px;
-    margin:20px;
-    width:280px;
-    height: 280px;
-    background: #fff;
-    box-shadow: 3px 7px 10px 2px #efe8ed;
-}
-
-.week img{
-    width: 100%;
-}
-.info{
-    display: none;
-}
-
-
-.current{
-    width:100%;
-    padding: 11px;;
-    margin:0;
-    border-right-color:#fff;
-    background: #f1f3f5;
-
+@media (max-width:414px) {
+    .search_events {
+        &>div:first-child {
+            width: 27%;
+        }
+        &>div:last-child {
+            width: 73%;
+            border-left: 1px solid #efe8ed;
+            background: #f1f3f5;
+            margin-left: 27%;
+            .search {
+                form {
+                    width: 100%;
+                    .form-group {
+                        width: 80%;
+                        margin-top: 20px;
+                    }
+                }
+            }
+        }
+    }
 }
