--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -1,67 +1,80 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-body, html{
-  width:100%;
-  height:100%;
-  /* background: #f1f3f5; */
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
+body,
+html {
+    width: 100%;
+    height: 100%;
+    /* background: #f1f3f5; */
+    p, li {
+        line-height: 25px;
+        color: #555;
+    }
+    h3 {
+        color: #555;
+    }
 
 
+    /* Custom CSS styles for layouts ( Flex box ) */
+    .flex {
+        display: flex;
+    }
+    .center {
+        justify-content: center;
+    }
+    .main-center {
+        align-items: center;
+    }
+    .around {
+        justify-content: space-around;
+    }
+    .between {
+        justify-content: space-between;
+    }
+    .column {
+        flex-direction: column;
+    }
+    .wrap {
+        flex-wrap: wrap;
+    }
+    .content {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        margin: 100px 0;
+    }
 
-/* Custom CSS styles */
+    /* Default elements styles */
+    .btn {
+        padding: 9px 18px;
+        border-radius: 4px;
+        border: 1px solid #efe8ed;
+        cursor: pointer;
+        width: 120px;
+        background: #046fa9;
+        color: #fff;
+        box-shadow: 5px 5px 3px #efe8ed;
+        outline: none;
+        font-size: 15px;
+    }
 
-.flex{
-  display: flex;
+
+    // Default elements animations
+
+    @keyframes fadein {
+        0%{
+            transform: scale(0.1);
+            opacity: 0;
+        }
+
+        100%{
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
 }
 
-.center{
-  justify-content: center;
-}
-
-.main-center{
-  align-items: center;
-}
-
-.around{
-  justify-content: space-around;
-}
-
-.between{
-  justify-content: space-between;
-}
-
-.column{
-  flex-direction: column;
-}
-
-.wrap {
-  flex-wrap: wrap;
-}
-
-.content{
-  width:100%;
-  height:100%;
-  overflow: auto;
-  margin: 100px 0;
-}
-
-
-/* Custom elements */
-.btn{
-  padding: 9px 18px;
-  border-radius: 4px;
-  border: 1px solid #efe8ed;
-  cursor: pointer;
-  width:120px;
-  background: #046fa9;
-  color:#fff;
-  box-shadow: 5px 5px 3px #efe8ed;
-  outline: none;
-  font-size: 15px;
-  
-}
 
