--- a/front/src/pages/profile/profile.scss
+++ b/front/src/pages/profile/profile.scss
@@ -1,58 +1,116 @@
+.profile {
+    &>div:first-child {
+        width: 15%;
+        position: fixed;
+        height: 400px;
+        border-right: 1px solid #efe8ed;
+        ul {
+            margin-top: 30px;
+            .current {
+                width: 92%;
+                margin: 0;
+                border-right-color: #fff;
+                background: #f1f3f5;
+                transition: background 500ms ease-in-out;
+            }
+            &>li {
+                line-height: 30px;
+                padding: 9px;
+            }
+        }
+    }
+    &>div:last-child {
+        width: 100%;
+        height: 100%;
+        margin-left: 15%;
+        padding: 10px;
+        .info {
+            .div {
+                margin: 20px;
+                width: 10%;
+                height: 20px;
+                padding: 10px;
+                text-align: center;
+                cursor: pointer;
+            }
+            
+        }
+        .main_info {
+            div {
+                margin: 20px;
+            }
+            .form-group {
+                width: 45%;
+            }
 
-
-
-.profile > div:first-child{
-    width: 20%;
-    height:400px;
-    border-right:1px solid red;
+        }
+        .integrations {
+            div {
+                width: 40%;
+                margin-bottom: 50px;
+                & p:last-child {
+                    border: 1px solid #efe8ed;
+                    padding: 10px;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    width: 140px;
+                    text-align: center;
+                }
+            }
+        }
+        .settings div {
+            width: 45%;
+        }
+    }
 }
 
 
-.profile > div:last-child{
-    width: 100%;
-    height:100%;
-    
-}
+@media (max-width:414px) {
+    .profile{
 
-.profile ul{
-    margin-top: 30px;
-}
-.profile ul > li{
-    line-height: 30px;
-}
+        &>div:first-child {
+            width: 25%;
 
-.edit .info .div{
-    margin:20px;
-    width:10%;
-    height:20px;
-    padding: 10px;
-    text-align: center;
-    cursor: pointer;
-}
+            ul{
+                .current {
+                    width: 85%;
+                    
+                }
+            }
+        }
 
+        &>div:last-child {
+            width: 80%;
+            height: 100%;
+            margin-left: 25%;
+            .integrations{
+                flex-direction: column;
 
-.main_info div {
-    margin:20px;
-}
+                div{
+                    width:95%;
+                }
+            }
 
-.main_info .form-group {
-    width:45%;
-}
+            .settings{
+                div{
+                    width:85%;
+                }
+            }
 
-.integrations div{
-    width:40%;
-    margin-bottom: 50px;
-}
+            .main_info{
 
-.integrations div p:last-child{
-    border:1px solid #efe8ed;
-    padding: 10px;
-    border-radius: 3px;
-    cursor: pointer;
-    width:140px;
-    text-align: center;
-}
+                .form-group{
+                    width:85%;
+                }
+            }
 
-.settings div{
-    width: 45%;
+            .credentials{
+
+                form{
+                    width:95%;
+                }
+            }
+        }
+    }
+
 }
