--- a/front/src/pages/join/join.scss
+++ b/front/src/pages/join/join.scss
@@ -41,6 +41,11 @@
         form {
             margin-bottom: 40px;
             width: 60%;
+            span {
+                color: #999999;
+                font-size: 15px;
+                font-weight: 100;
+            }
         }
     }
     .credentials_btn {
