--- a/front/src/pages/profile/profile.scss
+++ b/front/src/pages/profile/profile.scss
@@ -16,6 +16,7 @@
             &>li {
                 line-height: 30px;
                 padding: 9px;
+                cursor: pointer;
             }
         }
     }
